--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,45 @@
 page-home {
 
+  .header {
+    position: relative;
+    height: 300px;
+    margin-bottom: 30px;
+    .header-background {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      img {
+        object-fit: cover;
+        margin: 0 auto;
+        position: absolute;
+      }
+      .header-background-overlay {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        z-index: 2;
+        background: linear-gradient(to bottom, transparent, #222222);
+      }
+    }
+    .header-foreground {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 100px;
+      z-index: 3;
+      color: white;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    }
+  }
+
+  button {
+    padding: 8px 12px 8px 12px;
+    width: fit-content;
+    border: 0;
+    background-color: white;
+    border-radius: 50px;
+  }
+
 }
